kubernetes/apps/base/tools/attic/ingress.yaml
# Attic Ingress
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: attic
  namespace: tools
  labels:
    app.kubernetes.io/name: attic
  annotations:
    kubernetes.io/ingress.class: cilium
spec:
  tls:
    - hosts:
        - attic.home-infra.net
      secretName: wildcard-home-infra-net-tls
  rules:
    - host: attic.home-infra.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: attic
                port:
                  number: 80
